--- a/src/scss/partials/_reset.scss
+++ b/src/scss/partials/_reset.scss
@@ -14,6 +14,9 @@
 
 html, body {
   height: 100%;
+  margin: 0;
+  padding: 0;
+  color: #ffffff;
   -webkit-text-size-adjust: none;
   -ms-text-size-adjust: none;
   text-size-adjust: none;
@@ -31,9 +34,10 @@ section {
 
 a {
   outline: none;
-  color: $text-color;
+  color: #ffffff;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  @include transition($transition-base);
+  transition: $transition-base;
+  text-decoration: none;
   &:hover {
     //text-decoration: underline;
   }
@@ -44,6 +48,10 @@ a {
   &:visited {
     outline: 0;
   }
+}
+
+p {
+  margin: 0 0 1em;
 }
 
 blockquote, q {
