--- a/src/scss/partials/_utilits.scss
+++ b/src/scss/partials/_utilits.scss
@@ -60,16 +60,9 @@
   overflow: hidden;
   padding: 0;
   position: relative;
-}
 
-.row {
-  &:after {
-    display: none;
-  }
-
-  &.clearfix:after {
-    display: block;
-  }
+  background-image: url(../img/bg.webp);
+  background-repeat: no-repeat;
 }
 
 .section {
@@ -82,7 +75,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -1;
+  //z-index: -1;
 
   &:after {
     content: '';
@@ -103,4 +96,22 @@
 .title {
   font-size: 2.5rem;
   font-weight: $font-weight-normal;
+}
+
+.btn-style {
+  padding: 8px 6px;
+  background: #B154F0;
+  border-radius: 6px;
+  color: #ffffff;
+  font-weight: 700;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.card-style {
+  padding: 10px;
+  background: #09002A;
+  border: 4px solid #281E4D;
+  border-radius: 16px;
 }
